# GenerativeDm

./: .gitignore  LICENSE  README.md  calc_hitpoints.py  character.py  dnd5e.json  generate_character_input.py  pyproject.toml  test_graph.py
dnd5epy/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
dnd5epy/.openapi-generator/: FILES
dnd5epy/dnd5epy/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
dnd5epy/docs/: APIReference.md  APIReferenceList.md  AbilityBonus.md  AbilityScore.md  Alignment.md  AreaOfEffect.md  Armor.md  Background.md  BackgroundAllOfFeature.md  CharacterDataApi.md  Choice.md  ClassAllOfStartingEquipment.md  ClassApi.md  ClassLevel.md  ClassLevelClassSpecific.md  ClassLevelClassSpecificAnyOf.md  ClassLevelClassSpecificAnyOf1.md  ClassLevelClassSpecificAnyOf10.md  ClassLevelClassSpecificAnyOf11.md  ClassLevelClassSpecificAnyOf2.md  ClassLevelClassSpecificAnyOf3.md  ClassLevelClassSpecificAnyOf4.md  ClassLevelClassSpecificAnyOf5.md  ClassLevelClassSpecificAnyOf5MartialArts.md  ClassLevelClassSpecificAnyOf6.md  ClassLevelClassSpecificAnyOf7.md  ClassLevelClassSpecificAnyOf8.md  ClassLevelClassSpecificAnyOf9.md  ClassLevelClassSpecificAnyOf9CreatingSpellSlotsInner.md  ClassLevelsApi.md  ClassResourceListsApi.md  CommonApi.md  Condition.md  Cost.md  DC.md  Damage.md  DamageAtCharacterLevel.md  DamageAtSlotLevel.md  DamageType.md  Equipment.md  (+94 more)
dnd5epy/test/: test_ability_bonus.py  test_ability_score.py  test_alignment.py  test_api_reference.py  test_api_reference_list.py  test_area_of_effect.py  test_armor.py  test_background.py  test_background_all_of_feature.py  test_character_data_api.py  test_choice.py  test_class_all_of_starting_equipment.py  test_class_api.py  test_class_level.py  test_class_level_class_specific.py  test_class_level_class_specific_any_of.py  test_class_level_class_specific_any_of1.py  test_class_level_class_specific_any_of10.py  test_class_level_class_specific_any_of11.py  test_class_level_class_specific_any_of2.py  test_class_level_class_specific_any_of3.py  test_class_level_class_specific_any_of4.py  test_class_level_class_specific_any_of5.py  test_class_level_class_specific_any_of5_martial_arts.py  test_class_level_class_specific_any_of6.py  test_class_level_class_specific_any_of7.py  test_class_level_class_specific_any_of8.py  test_class_level_class_specific_any_of9.py  test_class_level_class_specific_any_of9_creating_spell_slots_inner.py  test_class_levels_api.py  test_class_resource_lists_api.py  test_common_api.py  test_condition.py  test_cost.py  test_damage.py  test_dc.py  (+98 more)
(+979 files in other folders)
