[tool.poetry]
name = "generativedm"
version = "1.0.3"
description = "This package will be the back-end for creating a DnD adventure with a AI assisted/autometed DM."
authors = ["Wesley Rademaker <rademakerwesley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = {extras = ["default"], version = "^3.1"}
black = "^23.3.0"
dnd5epypypy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
